--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <script src="https://d3js.org/d3.v7.min.js"></script>
+        <script src="visu1js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
@@ -33,11 +34,14 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#"> Vis3</a>
                 </li>
-                
+
               </ul>
             </div>
           </div>
         </nav>
+
+        <div id="visu1">
+        </div>
 
     </body>
 </html>
