--- a/index.html
+++ b/index.html
@@ -16,32 +16,10 @@
           </a>
         </header>
 
-        <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand"> Menu </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#">Vis1</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"> Vis2</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"> Vis3</a>
-                </li>
-
-              </ul>
-            </div>
-          </div>
-        </nav>
-
 
         <div id="visu1">
         </div>
+        <script src="data/week_days.js"></script>
         <script src="visu1.js"></script>
 
 
