ajout selection par utilisateur + effet de transition

--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
             <span class=" text-danger fs-4">Netflix Data Visualisation </span>
           </a>
         </header>
+        
+        <div class="col offset-md-5">
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="Hana" onchange="update()" checked>
+            <label class="form-check-label" for="inlineRadio1">Hana</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" onchange="update()" value="Tarik">
+            <label class="form-check-label" for="inlineRadio2">Tarik</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" onchange="update()" value="Both">
+            <label class="form-check-label" for="inlineRadio3">Both</label>
+          </div>
+        </div>
+
+        
 
 
         <div id="visu1">
