--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
         <title>Netflix data visualization</title>
+        <style>
+          .hidden {
+              display: none;
+          }
+          div.tooltip {
+              color: #222;
+              background-color: #fff;
+              padding: .5em;
+              text-shadow: #f5f5f5 0 1px 0;
+              border-radius: 2px;
+              opacity: 0.9;
+              position: absolute;
+          }
+        </style>
 
     </head>
     <body>
