--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
         <title>Netflix data visualization</title>
         <style>
           .hidden {
-              display: none;
+            display: none;
           }
           div.tooltip {
-              color: #222;
-              background-color: #fff;
-              padding: .5em;
-              text-shadow: #f5f5f5 0 1px 0;
-              border-radius: 2px;
-              opacity: 0.9;
-              position: absolute;
+            white-space: pre-wrap;
+            color: #222;
+            background-color: #fff;
+            padding: .5em;
+            text-shadow: #f5f5f5 0 1px 0;
+            border-radius: 2px;
+            opacity: 0.9;
+            position: absolute;
           }
         </style>
 
