problème cadre visu3

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <div id="visu2"></div>
     <script src="./visu2.js"></script>
 
+    <div id="visu3"></div>
+    <script src="./visu3.js"></script>
+
 
 </body>
 
