ébauche de la 4eme visualisation

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
     <div id="visu3"></div>
     <script src="./visu3.js"></script>
 
+    <div id="visu4"></div>
+    <script src="./visu4.js"></script>
 
 </body>
 
