--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <script src="https://d3js.org/d3.v7.min.js"></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-        <title>Netflix data visualization</title>
-        <style>
-          .hidden {
+<head>
+    <meta charset="utf-8" />
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <title>Netflix data visualization</title>
+    <style>
+        .hidden {
             display: none;
-          }
-          div.tooltip {
+        }
+        
+        div.tooltip {
             white-space: pre-wrap;
             color: #222;
             background-color: #fff;
@@ -20,13 +22,14 @@
             border-radius: 2px;
             opacity: 0.9;
             position: absolute;
-          }
-        </style>
+        }
+    </style>
 
-    </head>
-    <body>
-        <header class="pb-3 mb-4 border-bottom">
-          <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+</head>
+
+<body>
+    <header class="pb-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
             <span class=" text-danger fs-4">Netflix Data Visualisation </span>
         </a>
     </header>
@@ -46,9 +49,9 @@
         </div>
     </div>
 
+    <script src="./utils.js"></script>
 
-    <div id="visu1">
-    </div>
+    <div id="visu1"></div>
     <script src="./data/week_days.js"></script>
     <script src="./visu1.js"></script>
 
