changement chemin data

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
 
     <div class="container-fluid">
-        <script src="./js/utils.js"></script>
+        <script src="js/utils.js"></script>
 
         <div class="row justify-content-md-center">
             <div class="row">
@@ -58,8 +58,8 @@
                 <div class="col">
                     <br/>
                     <div class="d-flex justify-content-center" id="visu1"></div>
-                    <script src="./data/week_days.js"></script>
-                    <script src="./js/visu1.js"></script>
+                    <script src="data/week_days.js"></script>
+                    <script src="js/visu1.js"></script>
                 </div>
             </div>
 
@@ -68,17 +68,17 @@
         <div class="row row-cols-3">
             <div class="col col-md-4">
                 <div class="align-self-stretch" id="visu4"></div>
-                <script src="./js/visu4.js"></script>
+                <script src="js/visu4.js"></script>
             </div>
 
             <div class="col col-md-auto">
                 <div class="align-self-end" id="visu3"></div>
-                <script src="./js/visu3.js"></script>
+                <script src="js/visu3.js"></script>
             </div>
 
             <div class="col col-md-3">
                 <div id="visu2"></div>
-                <script src="./js/visu2.js"></script>
+                <script src="js/visu2.js"></script>
             </div>
         </div>
     </div>
