--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <title>Netflix data visualization</title>
+    <link rel="icon" type="image/x-icon" href="img/netflix-windows-icon-17.png">
     <style>
         .hidden {
             display: none;
@@ -29,14 +30,12 @@
 
 <body>
     <header class="pb-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-            <span class=" text-danger fs-4">Netflix Data Visualisation </span>
+        <a href="/" class="d-flex  text-dark text-decoration-none">
+            <span class=" text-danger fs-2">Netflix Data Visualisation </span>
         </a>
     </header>
 
     <div class="container-fluid">
-        <script src="js/utils.js"></script>
-
         <div class="row justify-content-md-center">
             <div class="row">
                 <div class="col offset-md-5 d-flex align-items-stretch">
@@ -44,16 +43,19 @@
                         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="Hana" onchange="update()" checked>
                         <label class="form-check-label" for="inlineRadio1">Hana</label>
                     </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" onchange="update()" value="Tarik">
-                        <label class="form-check-label" for="inlineRadio2">Tarik</label>
-                    </div>
+        
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" onchange="update()" value="Both">
                         <label class="form-check-label" for="inlineRadio3">Both</label>
                     </div>
+                    
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" onchange="update()" value="Tarik">
+                        <label class="form-check-label" for="inlineRadio2">Tarik</label>
+                    </div>
                 </div>
             </div>
+            <script src="js/utils.js"></script>
             <div class="row justify-content-md-center">
                 <div class="col">
                     <br/>
