--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <title>Netflix data visualization</title>
-    <link rel="icon" type="image/x-icon" href="img/netflix-windows-icon-17.png">
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
     <style>
         .hidden {
             display: none;
