correction bord vert/noir

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="row row-cols-1">
                     <div id="visu2"></div>
                     <script src="js/visu2.js"></script>
-                    <div class="col offset-1 mt-4 align-self-end border border-success rounded text-center" style="margin-top: 100px;">
+                    <div class="col offset-1 mt-4 align-self-end border border-dark rounded text-center" style="margin-top: 100px;">
                         <p>Ici, on s'intéresse à la répartition du temps de visionnage selon les appareils utilisés par chacun des profils</p>
                     </div>
                 </div>
