modif mineure footer

--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
                 </div>
 
                 <div class="col text-center">
-                    Data Visualisation
+                    <a href="https://lyondataviz.github.io/teaching/lyon1-m2/2021/">M2 Informatique - visualisation interactive de données</a>
+
                     </br>
                     <a href="https://www.univ-lyon1.fr"> Université Claude Bernard Lyon 1</a>
+
                 </div>
 
             </div>
