--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" onchange="update()" value="Both">
-                        <label class="form-check-label" for="inlineRadio3">Both</label>
+                        <label class="form-check-label" for="inlineRadio3">Together</label>
                     </div>
 
                     <div class="form-check form-check-inline">
@@ -48,20 +48,13 @@
                 </div>
             </div>
             <script src="js/utils.js"></script>
-            <div class="row row-cols-2">
-                <div class="col col-md-10 d-flex justify-content-center">
-                    <br/>
-                    <div id="visu1"></div>
-                    <script src="data/week_days.js"></script>
-                    <script src="js/visu1.js"></script>
-                </div>
-                <div class="col col-md-2 align-self-center border border-dark rounded text-center">
-                    <br/>
-                    <p> Ce calendrier représente le temps de visionnage quotidien entre le 06/04/2020 et le 21/11/2021 par profil.
-                    </p>
-                </div>
+            <div class="col d-flex justify-content-center">
+                <br/>
+                <div id="visu1"></div>
+                <script src="data/week_days.js"></script>
+                <script src="js/visu1.js"></script>
             </div>
-
+            
         </div>
 
         <div class="row row-cols-3">
