--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             Ce travail vise à étudier les contenus visionnés par les développeurs de ce projet. Les données personnelles fournies par la plateforme Netflix ont été utilisées.
         </p>
         <p class="text-start fw-light">
-            On se donne pour objectif la mise en valeur des différences entre les 3 profils étudiés ("Tarik", "Hana", ou "Both" - profil commun aux deux utilisateurs).
+            On se donne pour objectif la mise en valeur des différences entre les 3 profils étudiés ("Tarik", "Hana", ou "Together" - profil commun aux deux utilisateurs).
         </p>
 
     </header>
