--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </a>
         </br>
         <p class="text-start fw-light">
-            Ce travail vise à étudier les contenus visionnés par les développeurs de ce projet. Les données personnelles fournies par la plateforme Netflix ont été utilisées.
+            Ce travail vise à étudier les contenus visionnés par les développeurs de ce projet. Les données personnelles des auteurs du projet fournies par la plateforme Netflix ont été utilisées.
         </p>
         <p class="text-start fw-light">
-            On se donne pour objectif la mise en valeur des différences entre les 3 profils étudiés ("Tarik", "Hana", ou "Together" - profil commun aux deux utilisateurs).
+            On se donne pour objectif la mise en valeur des informations clés (temps de visionnage et contenus en particulier) des 3 profils étudiés ("Tarik", "Hana", ou "Together" - profil commun aux deux utilisateurs).
         </p>
 
     </header>
@@ -84,6 +84,7 @@
             <div class="row row-cols-3">
 
                 <div class="col text-center">
+                    <p>Réalisé avec <a href="https://d3js.org/">D3.js</a></p>
                     <a href="https://github.com/boumaza-sebia/dataviz-netflix"> Github</a>
                 </div>
 
@@ -96,11 +97,9 @@
                 </div>
 
                 <div class="col text-center">
-                    <a href="https://lyondataviz.github.io/teaching/lyon1-m2/2021/">M2 Informatique - visualisation interactive de données</a>
-
+                    <a href="https://lyondataviz.github.io/teaching/lyon1-m2/2021/">Visualisation interactive de données</a>
                     </br>
-                    <a href="https://www.univ-lyon1.fr"> Université Claude Bernard Lyon 1</a>
-
+                    <a href="http://master-info.univ-lyon1.fr/DS/">M2 Informatique - Université Claude Bernard Lyon 1</a>
                 </div>
 
             </div>
