--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
 
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" onchange="update()" value="Both">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" onchange="update()" value="    ">
                         <label class="form-check-label" for="inlineRadio3">Together</label>
                     </div>
 
@@ -58,25 +58,19 @@
         </div>
 
         <div class="row row-cols-3">
-            <div class="col col-md-4">
+            <div class="col">
                 <div class="align-self-stretch" id="visu4"></div>
                 <script src="js/visu4.js"></script>
             </div>
 
             <div class="col col-md-5 align-self-stretch">
-                <div class="row row-cols-1">
-                    <div class="col" id="visu3"></div>
-                    <script src="js/visu3.js"></script>
-
-                </div>
+                <div class="col" id="visu3"></div>
+                <script src="js/visu3.js"></script>
             </div>
 
             <div class="col col-md-2 align-self-stretch">
-                <div class="row row-cols-1">
-                    <div id="visu2"></div>
-                    <script src="js/visu2.js"></script>
-
-                </div>
+                <div id="visu2"></div>
+                <script src="js/visu2.js"></script>
             </div>
         </div>
 
