--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
 
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" onchange="update()" value="    ">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" onchange="update()" value="Both">
                         <label class="form-check-label" for="inlineRadio3">Together</label>
                     </div>
 
